# CognID-GenRec

./: .gitignore  README.md  pyproject.toml
data/samples/: interactions.csv  items.csv  users.csv
docs/: EXPERIMENT_LOG.md  IMPLEMENTATION_PLAN.md  待解决问题.md  目前项目进展.md
docs/superpowers/plans/: 2026-06-30-kuairec-taac-rebuild.md
reports/metrics/: baseline_metrics.md  experiment_panel.md  gen_retriever_train.md  generative.md  generative_rerank.md  itemcf.md  kuairec_ann_transformer.md  kuairec_experiment_panel.md  kuairec_itemcf.md  kuairec_popular.md  kuairec_retriever_train.md  kuairec_semantic_id_kmeans.md  popular.md  recommend_example.json  semantic_id_quality.md
scripts/: __init__.py  evaluate_kuairec_retriever.py  evaluate_retrieval.py  prepare_content_data.py  prepare_kuairec_data.py  serve_kuairec_recommender.py  serve_recommender.py  train_generative_retriever.py  train_kuairec_retriever.py  train_kuairec_semantic_id.py  train_semantic_id.py
src/cognid_genrec/data/: __init__.py  schemas.py  sequence_builder.py  validate.py
src/cognid_genrec/evaluation/: __init__.py  protocol.py  ranking_metrics.py  reports.py  segmented_metrics.py
tests/: test_ann_index.py  test_contrastive_model.py  test_data_schema.py  test_diversity_reranker.py  test_evaluation_protocol.py  test_kuairec_behaviors.py  test_kuairec_features.py  test_kuairec_metrics.py  test_kuairec_recommend_api.py  test_kuairec_sequences.py  test_ranking_metrics.py  test_recommend_api.py  test_semantic_id_decoder.py  test_semantic_id_tokenizer.py  test_sequence_builder.py  test_smoke.py
(+23 files in other folders)
