[project]
name = "cognid-genrec"
version = "0.1.0"
description = "KuaiRec-based multi-behavior generative recommendation offline experiment"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pyarrow>=15.0.0",
  "torch>=2.2.0",
  "scikit-learn>=1.4.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]
kuairec = ["faiss-cpu>=1.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
